stopped at 33:11 lesson 4.5 to eat

--- a/intro_quantum_computing/ML_AI_Frameworks.ipynb
+++ b/intro_quantum_computing/ML_AI_Frameworks.ipynb
@@ -237,8 +237,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93bc2e11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "80bcedd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample datay\n",
+    "X = [[1], [2],[3],[4],[5],[1],[2],[3],[4],[5],[1], [2],[3],[4],[5],[1],[2],[3],[4],[5]]\n",
+    "y = [1,2,3,4,5,1,2,3,4,5,1,2,3,4,5,1,2,3,4,5] # Labels\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Train a model\n",
+    "model = LogisticRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "663dec54",
+   "metadata": {},
+   "source": [
+    "### Feature Engineering & Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "50a69831",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c020873d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample dataset\n",
+    "data = {'Age': [23, 30, 35, 42, None], 'Salary': [14000, 60000, 120000, None, 5], 'Gender':['Guy', 'Lady','Lady','Guy', 'Guy']}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Handling missing values (fill with mean)\n",
+    "df[\"Age\"]  = df[\"Age\"].fillna(df[\"Age\"].mean())\n",
+    "df[\"Salary\"] = df[\"Salary\"].fillna(df[\"Salary\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8750784b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding caegorical variable\n",
+    "encoder = OneHotEncoder(sparse_output=False)\n",
+    "gender_encoded = encoder.fit_transform(df[['Gender']])\n",
+    "df_gender = pd.DataFrame(gender_encoded, columns=['Guy', 'Lady'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "595dac55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scaling numerical features\n",
+    "scaler = StandardScaler()\n",
+    "df[['Age', 'Salary']] = scaler.fit_transform(df[['Age','Salary']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c7c16527",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed Data:\n",
+      "         Age    Salary  Guy  Lady\n",
+      "0 -1.529079 -0.823022  1.0   0.0\n",
+      "1 -0.402389  0.274301  0.0   1.0\n",
+      "2  0.402389  1.705592  0.0   1.0\n",
+      "3  1.529079  0.000000  1.0   0.0\n",
+      "4  0.000000 -1.156871  1.0   0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Concatenatng final processed data\n",
+    "df_final = pd.concat([df[['Age', 'Salary']], df_gender], axis=1)\n",
+    "print(\"Preprocessed Data:\\n\",df_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0be06b6e",
    "metadata": {},
    "outputs": [],
    "source": []
